# zsLib

./: BUILD.gn  zslib_sources.gni
projects/msvs/: zsLib.Universal.sln  zsLib.Win32.sln
zsLib/: Exception.h  IHelper.h  IMessageQueue.h  IMessageQueueDispatcher.h  IMessageQueueManager.h  IMessageQueueThread.h  IMessageQueueThreadPool.h  ITimer.h  Log.h  Promise.h  Proxy.h  ProxySubscriptions.h  Socket.h  String.h  TearAway.h  XML.h  helpers.h  types.h
zsLib/cpp/: zsLib.cpp  zsLib_Event.cpp  zsLib_Exception.cpp  zsLib_Helper.cpp  zsLib_IPAddress.cpp  zsLib_Log.cpp  zsLib_MessageQueue.cpp  zsLib_MessageQueueAssociator.cpp  zsLib_MessageQueueDispatcher.cpp  zsLib_MessageQueueDispatcherForCppWinrt.cpp  zsLib_MessageQueueDispatcherForWinUWP.cpp  zsLib_MessageQueueManager.cpp  zsLib_MessageQueueThread.cpp  zsLib_MessageQueueThreadBasic.cpp  zsLib_MessageQueueThreadPool.cpp  zsLib_MessageQueueThreadUsingBlackberryChannels.cpp  zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForCppWinrt.cpp  zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWinUWP.cpp  zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForWindows.cpp  zsLib_MessageQueueThreadUsingMainThreadMessageQueueForApple.cpp  zsLib_Numeric.cpp  zsLib_Promise.cpp  zsLib_Proxy.cpp  zsLib_RangeSelection.cpp  zsLib_Settings.cpp  zsLib_Singleton.cpp  zsLib_Socket.cpp  zsLib_SocketMonitor.cpp  zsLib_String.cpp  zsLib_Stringize.cpp  zsLib_Timer.cpp  zsLib_TimerMonitor.cpp  zsLib_WindowsEventProviderLogger.cpp  zsLib_XMLAttribute.cpp  zsLib_XMLComment.cpp  zsLib_XMLDeclaration.cpp  zsLib_XMLDocument.cpp  zsLib_XMLElement.cpp  zsLib_XMLGenerator.cpp  zsLib_XMLNode.cpp  (+6 more)
zsLib/eventing/: Log.h
zsLib/extras/: zsLib_Rx64GetAddapterAddresses.cpp
zsLib/idl/: zsLib.idl
zsLib/internal/: platform.h  types.h  zsLib.events.h  zsLib.events.jman.h  zsLib_Log.h  zsLib_MessageQueue.h  zsLib_MessageQueueDispatcher.h  zsLib_MessageQueueDispatcherForCppWinrt.h  zsLib_MessageQueueDispatcherForWinUWP.h  zsLib_MessageQueueManager.h  zsLib_MessageQueueThread.h  zsLib_MessageQueueThreadBasic.h  zsLib_MessageQueueThreadPool.h  zsLib_MessageQueueThreadUsingCurrentGUIMessageQueueForCppWinrt.h  zsLib_Proxy.h  zsLib_ProxyPack.h  zsLib_Socket.h  (+7 more)
zsLibTest/: TestPromise.cpp  TestProxy.cpp  TestProxyUsingGUIThread.cpp  TestSocket.cpp  TestString.cpp  TestTearAway.cpp  TestXML.cpp  main.cpp  testing.h
(+9 files in other folders)
